--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="/assets/images/campanha-autenticacao.png"  width="350px" alt="">
+        <img src="https://6xas.github.io/sei-modal-login/assets/images/campanha-autenticacao.png"  width="350px" alt="">
         <h5>A autenticação em dois fatores adiciona maior segurança ao seu acesso ao sistema Sei, combinando algo que você sabe (sua senha) com algo que você possui (seu smartphone). </h5>
       </div>
       <div class="modal-footer">
